# distributed-data-processing

./: .gitignore  .gitlab-ci.yml  AzureBlobClient.cpp  AzureBlobClient.h  CMakeLists.txt  CloudAzure.cpp  CloudAzure.h  Common.cpp  Common.h  Coordinator.cpp  Coordinator.h  Disk.cpp  Disk.h  Dockerfile  Network.cpp  Network.h  README.md  Storage.h  Worker.cpp  Worker.h  coordinator.cpp  groupMembers.txt  result.txt  worker.cpp
cmake/: azure-storage-lite.cmake
include/common/: Consts.h
include/coordinator/: Coordinator.h
include/network/: Network.h
include/storage/: AzureBlobClient.h  CloudAzure.h  Disk.h  Storage.h
include/worker/: Worker.h
src/common/: CMakeLists.txt  Common.cpp  CurlEasyPtr.cpp
src/coordinator/: CMakeLists.txt  Coordinator.cpp
src/network/: CMakeLists.txt  Network.cpp
src/storage/: AzureBlobClient.cpp  CMakeLists.txt  CloudAzure.cpp  Disk.cpp
src/worker/: CMakeLists.txt  Worker.cpp
tests/: createfiles  runtests
